--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100%;
   text-align: center;
+  padding : 1vw
 }
 
 .logo {
@@ -12,7 +11,7 @@
   transition: filter 300ms;
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+  filter: drop-shadow(0 0 2em #5058f9aa);
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
@@ -38,5 +37,11 @@
 }
 
 .read-the-docs {
-  color: #888;
+  color: #ffffff;
 }
+
+/* App.css */
+body {
+  background-color: #ffffff;
+}
+
