ダークモード実装

--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,11 @@ body {
   background-color: #ffffff;
 }
 
+.dark-mode {
+  background-color: #121212;
+  color: white;
+}
+
+.dark-mode a {
+  color: lightblue;
+}
