--- a/src/App.css
+++ b/src/App.css
@@ -39,16 +39,29 @@
   color: #ffffff;
 }
 
-/* App.css */
 body {
   background-color: #ffffff;
 }
 
+body {
+  transition: background-color 0.5s ease, color 0.5s ease;
+}
+
 .dark-mode {
-  background-color: #121212;
+  background-color: #1e1e1e;
   color: white;
 }
 
 .dark-mode a {
   color: lightblue;
+  transition: color 0.5s ease;
+}
+
+body, html, #root {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  font-family: sans-serif;
 }
